Rename service identity fields
